자기소개서 추가, 일부 내용 수정

--- a/Login/3.About us/about_style.css
+++ b/Login/3.About us/about_style.css
@@ -108,7 +108,7 @@ body {
 .about-bottom h2 {
     font-size: 28px;
     margin-bottom: 40px;
-    color: #1f5dea;
+    color: #0b45ce;
 }
 
 .features {
