--- a/Login/4.Contact/contact_style.css
+++ b/Login/4.Contact/contact_style.css
@@ -4,9 +4,9 @@
   box-sizing: border-box;
 }
 
-body {
+body.contact-main {
   font-family: 'Pretendard', sans-serif;
-  background-color: #fff;
+  background-color: #ffffff;
   color: #222;
   margin: 0;
   box-sizing: border-box;
@@ -60,14 +60,17 @@ body {
   flex: 0 0 30%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: 18px;
   color: #333;
   line-height: 1.6;
+  margin-top: 50px;
 }
 
 .contact-left p {
   font-size: 24px;
+  color: #356ae4;
+  font-weight: bold;
 }
 
 @media (max-width: 768px) {
@@ -128,8 +131,8 @@ body {
 }
 
 .contact-table textarea {
-  resize: vertical;
-  min-height: 100px;
+  resize: none;
+  min-height: 200px;
 }
 
 .contact-table .help-text {
@@ -139,7 +142,7 @@ body {
 }
 
 .required {
-  color: #1f5dea;
+  color: #356ae4;
   margin-left: 4px;
 }
 
@@ -156,7 +159,7 @@ body {
 
 .submit-cell button {
   padding: 14px 28px;
-  background-color: #1f5dea;
+  background-color: #356ae4;
   color: #fff;
   font-size: 16px;
   font-weight: bold;
