로그인 링크 변경

--- a/Login/2. 로그인_회원가입 화면/login_join_style.css
+++ b/Login/2. 로그인_회원가입 화면/login_join_style.css
@@ -205,6 +205,12 @@ body {
     display: block;
   }
 
+  .front .btn a {
+    color: white;
+    text-decoration: none;
+    padding: 16px;
+  }
+
 /*회원가입 화면 뒤*/
 .back {
     position: absolute;
